added params to search API
